New Crowdin updates (#162)
* New translations en_us.json (Russian)

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Spanish)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* Update source file en_US.json

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Spanish)

* New translations en_us.json (Spanish)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Spanish)

* New translations en_us.json (Spanish)

* New translations en_us.json (Spanish)

* New translations en_us.json (Spanish)

* New tran

--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -4,7 +4,7 @@
   "HostText": "EHR",
   "IconColor": "#902efd",
   "HostColor": "#4bf4ff",
-  "Icon": "♥",
+  "Icon": "!",
   "NameColor": "#00ffa5",
   "Server": "<#00ffa5>Регион:</color> <b>{0}</b>",
   "SubText.Crewmate": "Найдите и выкиньте всех <color=#ff1919>убийц</color>",
@@ -1197,7 +1197,7 @@
   "FreezeAfterCurseKill": "Замораживать после убийства проклятым игроком",
   "DecreasedKillCooldown": "Уменьшенный откат убийства",
   "KillCooldown": "Откат убийства",
-  "VentCooldown": "Откат использование люка",
+  "VentCooldown": "Откат выпивания зелья",
   "MaxInVentTime": "Макс. время в люке",
   "NoisemakerImpostorAlert": "Уведомлять <color=#ff1919>Предателей</color>",
   "NoisemakerAlertDuration": "Длительность способности",
@@ -1846,8 +1846,30 @@
   "RomanticProtectDuration": "Длительность щита",
   "RomanticKnowTargetRole": "<color=#ff1493>Romantic</color> знает роль своей цели",
   "RomanticBetTargetKnowRomantic": "Цель знает, кто её <color=#ff1493>Romantic</color>",
+  "RomanticGetsPartnerConvertedAddons": "<color=#ff1493>Romantic</color> получает рекрутирующий атрибут своего партнёра",
   "RomanticArrows": "<color=#ff1493>Romantic</color> видит стрелку на партнёра",
   "RomanticPartnerHasArrows": "Партнёр видит стрелку на <color=#FF1493>Romantic</color>'а",
+  "Gaslighter": "Gaslighter",
+  "GaslighterInfo": "Заставьте других игроков сомневаться в своей памяти",
+  "GaslighterInfoLong": "(Пассивный Нейтрал/Нейтральный Убийца):\\nКак Gaslighter, каждый раунд с помощью кнопки убийства вы совершаете разное действие.<size=80%>\\n\\nРаунд 1: Обычное убийства\\nРаунд 2: Посвящение игроков (способность Monarch'а)\\nРаунд 3: Проклятие игроков (Способность Witch'а)\\nРаунд 4: Щит (Способность Medic'а)\\n\\n</size><size=90%>Далее цикл повторяется, либо же вы начинаете убивать нормально, в зависимости от настроек.\\nУсловие победы зависит от настроек.</size>",
+  "Gaslighter.WinCondition": "Условие победы",
+  "GaslighterWinCondition.CrewLoses": "<#8cffff>Члены Экипажа</color> <#ff0000>проигрывают</color>",
+  "GaslighterWinCondition.IfAlive": "<#00ff00>Жив</color> в конце игры",
+  "GaslighterWinCondition.LastStanding": "<#ffab1b>Последний выживший</color>",
+  "Gaslighter.CycleRepeats": "Кнопка убийства работает циклично",
+  "Gaslighter.Kill": "В этом раунде вы <#ff1919>убиваете нормально</color>",
+  "Gaslighter.Knight": "В этом раунде вы <#ffa500>посвящаете игроков</color>",
+  "Gaslighter.Curse": "В этом раунде вы <#ff00ff>проклинаете игроков</color>",
+  "Gaslighter.Shield": "В этом раунде вы <#00ff97>защищаете игроков</color>",
+  "Technician": "Technician",
+  "TechnicianInfo": "Чините саботажи",
+  "TechnicianInfoLong": "(Пассивный Нейтрал):\\nКак Technician, вам нужно чинить саботажи, чтобы выиграть. Починив саботаж, вы получаете некоторое количество очков (кол-во очков за отдельный саботаж зависит от настроек). Если вы достигли нужного кол-ва очков, вы победите.\\n\\nВ зависимости от настроек, после достижения нужного кол-ва очков, вы либо победите в одиночку, либо победите с любой другой выигравшей командой.\\nТакже, в зависимости от настроек, вы можете использовать люки.\\nВы не получите очки, починив двери.",
+  "Technician.WinsAlone": "Побеждает в одиночку",
+  "Technician.RequiredPoints": "Кол-во очков для победы",
+  "Technician.PointGain.Electrical": "За починку Света даётся очков",
+  "Technician.PointGain.Comms": "За починку Связи даётся очков",
+  "Technician.PointGain.LifeSupp": "За починку О2 даётся очков",
+  "Technician.PointGain.Reactor": "За починку Реактора даётся очков",
   "Speedrunner": "Speedrunner",
   "SpeedrunnerInfo": "<color=#8cffff>Экипаж</color> победит, если вы сделаете все таски",
   "SpeedrunnerInfoLong": "(Член Экипажа):\\nКак Speedrunner, когда вы выполните все свои таски (и при этом будете оставаться в живых), игра мгновенно закончится победой команды членов экипажа.",
@@ -2229,6 +2251,8 @@
   "CommandDescription.Note": "Управление своими заметками, как Journalist",
   "CommandDescription.OS": "Задать шанс появления роли",
   "CommandDescription.Negotiation": "Выбрать одно из наказаний как жертва Negitiator'а",
+  "CommandDescription.Mute": "Замутить кого-то. Игроки в муте не могут писать сообщения. Когда игра начнётся, мут снимется.",
+  "CommandDescription.Unmute": "Размутить кого-то.",
   "CommandArgs.ChangeSetting.Name": "Название настройки (оставьте пустым для просмотра всех названий)",
   "CommandArgs.ChangeSetting.UnknownValue": "(оставьте пустым для просмотра, что сюда вставить)",
   "CommandArgs.Rename.Name": "Новый никнейм",
@@ -2291,6 +2315,9 @@
   "CommandArgs.OS.Chance": "Шанс появления роли",
   "CommandArgs.OS.Role": "Роль",
   "CommandArgs.Negotiation.Number": "Номер наказания (0/1/2/3)",
+  "CommandArgs.Mute.Id": "ID игрока",
+  "CommandArgs.Mute.Duration": "Длительность мута (по умолчанию 60 секунд)",
+  "CommandArgs.Unmute.Id": "ID игрока",
   "Commands.ChangeSettingHelp": "<b><u>Аргументы:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Примечания:</b></u>\\n1. Верхний/нижний регистры не имеют разницы\\n2. Там, где написано ''Custom'' нужно поставить целочисленное значение\\n3. Там, где написано ''Float'', вставьте численное значение, не обязательно целочисленное (например 1,7 или 2,5)\\n4. ''ghostdotasks'' может вызвать ошибки если вы измените его\\n5. Примеры использования:\\n   - ''/cs map polus''\\n   - ''/cs killdistance custom 4''\\n   - ''/cs trackdelay 1,7''\\n   - ''/cs confirmejects on''",
   "PollResultTitle": "Результаты опроса",
   "Poll.Title": "<#ff0000>➡ ОПРОС ⬅</color>",
@@ -2303,6 +2330,12 @@
   "Poll.VotingInfo": "Используйте /pv [ответ], чтобы проголосовать. Ответом может являться буква или число.",
   "Poll.YouVoted": "Вы проголосовали за {0}. У этого вариант сейчас {1} голос(-ов).",
   "PollUsage": "Формат:\\n<size=80%><b>/poll [вопрос]? <size=55%>{вариант A} {вариант B} \n[вариант C] [вариант D]</size></b></size>\n\n<size=50%>Примечание: вопрос всегда должен заканчиваться знаком <b>?</b>, ответы должны быть слитными.</size>",
+  "PlayerMuted": "{0} был замучен на <#00ffa5>{1}</color>секунды(-ы).",
+  "YouMuted": "<#ffff00><u>{0}</u> замутил вас на <#ff0000>{1}</color> секунд(-ы).",
+  "ModeratorMuted": "Модератор {0} замутил {1} на <#00ffa5>{2}</color> секунд(-ы).",
+  "PlayerUnmuted": "Вы размутили {0}.",
+  "YouUnmuted": "{0} размутил вас.",
+  "MuteMessage": "<#ff0000>Вас замутили. Вы не можете отправлять сообщения. Мут закончится через <#ffff00>{0}</color> секунд(-ы).</color>",
   "ThankYouForUsingEHR": "Спасибо за использование EHR!",
   "LoadingHint.0": "А вы знали?\nВы можете создавать новые кастомные команды из ролей!\nИнструкции расположены на сайте EHR (ссылка в главном меню)!",
   "LoadingHint.1": "А вы знали?\nВы можете заставлять роли всегда или никогда появляться с определёнными атрибутами с помощью команды /combo!",
@@ -2332,7 +2365,7 @@
   "LoadingHint.25": "Все проголосовали, а собрание не заканчивается?\nНажмите F6, чтобы мгновенно закончить собрание, при этом подсчитав все голоса!",
   "LoadingHint.26": "Ваш друг всезнайка?\nВключите Chemist'а и посмотрите на его реакцию!",
   "LoadingHint.27": "Интересный факт - любимые роли разработчика:\nEcho, Penguin, Rift Maker, Bubble, Evolver, Rogue, Vengeance....\nи все роли членов экипажа! :D",
-  "LoadingHint.28": "А вы знали?\nВсего в EHR целых 7 режимов! Попробуйте их всех!\nПереключайте режимы с помощью кнопки ⇄ рядом с большим заголовком слева сверху в настройках!",
+  "LoadingHint.28": "А вы знали?\nВсего в EHR целых 9 режимов! Попробуйте их всех!\nПереключайте режимы с помощью кнопки ⇄ рядом с большим заголовком слева сверху в настройках!",
   "LoadingHint.29": "А вы знали?\nВ EHR есть уникальные режим ''Светофор''\nПопробуйте его после этой игры!",
   "LoadingHint.30": "Вам надоело получать роль Члена Экипажа снова и снова? Никого не убивали уже час?\nПокажите на что вы способны в режиме Free For All!",
   "LoadingHint.31": "А вы знали?\nВ EHR есть кастомный режим пряток с 12 уникальными ролями!",
@@ -2688,9 +2721,7 @@
   "NextPage": "След. страница",
   "PreviousPage": "Пред. страница",
   "EAC.CheatDetected.EAC": "Обнаружено использование читов (используется AUM)",
-  "PressF1ShowMainRoleDes": "Нажатие F1 покажет описание вашей роли",
-  "PressF2ShowAddRoleDes": "Нажатие F2 покажет описание вашего атрибута",
-  "PressF3ShowRoleSettings": "Нажатие F3 покажет настройки вашей роли",
+  "PressF1ShowMainRoleDes": "Нажмите F1, чтобы узнать о вашей роли и атрибутах",
   "FakeTask": "Фальшивые таски:",
   "PVP.ATK": "Атака",
   "PVP.DF": "Защита",
@@ -2974,6 +3005,7 @@
   "Hypnotist": "Hypnotist",
   "HypnotistInfo": "Мешайте игрокам репортить трупы",
   "HypnotistInfoLong": "(Предатель):\\nКак Hypnotist, вы можете временно сделать все трупы на карте невозможными к репорту с помощью морфа/кнопки питомца.",
+  "Hypnotist.DoReportAfterHypnosisEnds": "Автоматически начать собрание после конца гипноза, если во время гипноза кто-то попытался зарепортить труп",
   "Altruist": "Altruist",
   "AltruistInfo": "Сотрите роль вашего убийцы",
   "AltruistInfoLong": "(Член Экипажа):\\nУбийца Altruist'а потеряет все способности своей роли и получит роль Impostor, либо же Shapeshifter.",
@@ -3673,6 +3705,7 @@
   "CanKillWhileShifted": "Может убивать во время морфа",
   "Shapeshift": "Морф",
   "UsesPetInsteadOfKillNotice": "<#ffff00>⚠ Играя за эту роль, вы должны использовать\\nкнопку питомца вместо кнопки убийства!</color>",
+  "AddonListTitle": "<b><u>Ваши атрибуты:</u></b>",
   "Framer": "Framer",
   "FramerInfo": "Подставляй других игроков",
   "FramerInfoLong": "(Предатель):\\nКак Framer, вы можете нажать на кнопку один раз на ком-то, чтобы подставить его. Это заставит игру думать, что этот кто-то - Предатель (соответственно все роли, которые обнаруживают Предателей, будут видеть этого игрока как Предателя). Чтобы убить обычным способом, нажмите кнопку убийства два раза.",
@@ -4044,6 +4077,14 @@
   "ModeDescribe.NaturalDisasters": "В режиме ''Катаклизмы'' карта заполнена разными природными катаклизмами. Чтобы победить, вы должны остаться последним выжившим.<size=80%>\\n\\nСписок катаклизмов и их последствия:</size><size=70%><size=70%>\\n- Землетрясения: Земля трясётся и двигаться становится труднее.\\n- Метеорит: С неба падает метеорит и убивает всех игроков в определённом радиусе.\\n- Извержение Вулкана: Из какого-то места начинает выходить лава, убивая всех, кто на неё наступит.\\n- Торнадо: Игроков медленно засасывает в торнадо, и там они умирают.\\n- Гроза: Молнии бьют снаружи комнат, убивая игроков, по которым они попали.\\n- Песчаная Буря: Песок попадает в глаза и уменьшает зрение.\\n- Цунами: Огромная волна движется в определённом направлении, убивая всех на своём пути.\\n- Воронка: В земле образуется воронка, попадание в которую игроки умирают.\\n- Разрушение Здания: Здание (комната) на карте разрушается, убивая всех внутри. В разрушенные комнаты нельзя зайти.</size>",
   "ND_DisasterFrequency": "Частота появления катаклизмов",
   "ND_DisasterWarningTime": "Игроки предупреждаются о катаклизме за",
+  "ND_LimitMaximumDisastersAtOnce": "Ограничить кол-во катаклизмов, которые могут действовать одновременно",
+  "ND_MaximumDisastersAtOnce": "Макс. активных катаклизмов одновременно",
+  "ND_WhenLimitIsReached": "Когда лимит достигнут",
+  "ND_LimitReachedOptions.OnlySpawnInstantDisasters": "Созд. только однораз. катаклизмы",
+  "ND_LimitReachedOptions.RemoveRandom": "Убрать случайный катаклизм",
+  "ND_LimitReachedOptions.RemoveOldest": "Убрать старейший катаклизм",
+  "ND_PreferRemovingThunderstorm": "Предпочитать удаление Грозы",
+  "ND_Disaster.SpawnChance": "Шанс появления катаклизма {disaster}",
   "ND_Earthquake.DurationOpt": "Длительность Землятрясения",
   "ND_Earthquake.Speed": "Скорость игроков рядом с Землятрясением",
   "ND_VolcanoEruption.FlowStepDelay": "Лава продвигается дальше каждые",
@@ -4455,6 +4496,7 @@
   "Bloodmoon.Duration": "Задержка убийства цели",
   "Bloodmoon.Suffix": "<{1}>Ты умрёшь через <{2}>{0}с</color></color>",
   "Bloodmoon.Speed": "Скорость <#ff1919>Bloodmoon</color>'а",
+  "Bloodmoon.DieOnMeetingCall": "Цели умирают при вызове собраний",
   "Prefix.Bloodmoon": "Bloodmoon",
   "GA": "Guardian Angel",
   "GAInfo": "Защищайте экипаж",
@@ -4625,6 +4667,7 @@
   "President.UsedDecreeMessage.Everyone": "<#30916f>President</color> издал новый указ: <#ffab1b>{0}</color>!",
   "President.DecreeAlreadyUsedMessage": "Вы уже издали этот указ ранее/этот указ выключен настройками!",
   "President.DecreeAlreadyChosenThisMeetingMessage": "На этом собрании вы уже издали указ!",
+  "President.UsedDecreeMessage.RevealMessage": "{0} - <#30916f>President</color>!",
   "GuessPresident": "Гадать раскрытого <#30916f>President</color> немного нечестно, не думали?",
   "GuessErased": "Вы не можете угадать роль стёртого игрока",
   "Alchemist": "Alchemist",
@@ -4636,7 +4679,7 @@
   "AlchemistSpeedDur": "Длительность зелья скорости",
   "AlchemistVision": "Зрение во время зелья сияния",
   "AlchemistVisionOnLightsOut": "Зрение во время саботажа света во время зелья сияния",
-  "AlchemistVisionDur": "Длительность зрения сияния",
+  "AlchemistVisionDur": "Длительность зелья сияния",
   "AlchemistVentButtonText": "Выпить",
   "AlchemistGotShieldPotion": "\\n\\n<color=#ffffff><size=1.7><color=#e6d798>Зелье: </color><color=#00ff97>Защиты</color>\\n<color=#e6d798>Описание: </color>Даёт временный щит\\nАктивируется с помощью <color=#e6d798>Люка/Питомца</color></size></color>",
   "AlchemistGotSightPotion": "\\n\\n<color=#ffffff><size=1.7><color=#e6d798>Зелье: </color><color=#eee5be>Сияния</color>\\n<color=#e6d798>Описание: </color>Временно увеличивает ваше зрение\\nАктивируется с помощью <color=#e6d798>Люка/Питомца</color></size></color>",
