--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -3006,9 +3006,9 @@
   "HypnotistInfo": "Impeça reportes de corpos",
   "HypnotistInfoLong": "(Impostores):\\nComo Hipnotizador, você pode evitar que todos os jogadores reportem corpos usando sua habilidade (transfomar/pet).",
   "Hypnotist.DoReportAfterHypnosisEnds": "Processar reportes que foram bloqueados durante a hipnose apos a hipnose terminar",
-  "Altruist": "Altruista",
-  "AltruistInfo": "Apague a função do seu assassino",
-  "AltruistInfoLong": "(Tripulantes):\nComo Altruísta, se um Impostor te matar, ele perderá suas habilidades e se tornará um Impostor ou Metamorfo Normal.",
+  "Bane": "Banea",
+  "BaneInfo": "Apague a função do seu assassino",
+  "BaneInfoLong": "(Tripulantes):\nComo Altruísta, se um Impostor te matar, ele perderá suas habilidades e se tornará um Impostor ou Metamorfo Normal.",
   "Transmitter": "Transmissor",
   "TransmitterInfo": "Teleporte para o jogador mais proximo ao compeltar uma tarefa",
   "TransmitterInfoLong": "(Tripulantes):\nComo Transmissor, quando você completa uma tarefa, você teleporta para o jogador mais próximo.",
