--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -3006,9 +3006,9 @@
   "HypnotistInfo": "Мешайте игрокам репортить трупы",
   "HypnotistInfoLong": "(Предатель):\\nКак Hypnotist, вы можете временно сделать все трупы на карте невозможными к репорту с помощью морфа/кнопки питомца.",
   "Hypnotist.DoReportAfterHypnosisEnds": "Автоматически начать собрание после конца гипноза, если во время гипноза кто-то попытался зарепортить труп",
-  "Altruist": "Altruist",
-  "AltruistInfo": "Сотрите роль вашего убийцы",
-  "AltruistInfoLong": "(Член Экипажа):\\nУбийца Altruist'а потеряет все способности своей роли и получит роль Impostor, либо же Shapeshifter.",
+  "Bane": "Bane",
+  "BaneInfo": "Сотрите роль вашего убийцы",
+  "BaneInfoLong": "(Член Экипажа):\\nУбийца Bane'а потеряет все способности своей роли и получит роль Impostor, либо же Shapeshifter.",
   "Transmitter": "Transmitter",
   "TransmitterInfo": "Телепортируйтесь к игрокам за таски",
   "TransmitterInfoLong": "(Член Экипажа):\\nПри выполнении любого таска, Transmitter телепортируется к ближайшему игроку.",
