--- a/Resources/Lang/zh_CN.json
+++ b/Resources/Lang/zh_CN.json
@@ -3006,9 +3006,9 @@
   "HypnotistInfo": "防止玩家报告尸体",
   "HypnotistInfoLong": "(内鬼职业):\\n催眠师可以使用变形或宠物按钮施展能力,阻止所有玩家报告尸体.",
   "Hypnotist.DoReportAfterHypnosisEnds": "催眠结束后在催眠期间被阻止的过程报告",
-  "Altruist": "反将一军",
-  "AltruistInfo": "抹除尝试击杀你的人的职业",
-  "AltruistInfoLong": "(船员职业):\\n反将一军被一个内鬼击杀时,内鬼将失去职业,成为一个正常的冒名顶替者或变形者.",
+  "Bane": "反将一军",
+  "BaneInfo": "抹除尝试击杀你的人的职业",
+  "BaneInfoLong": "(船员职业):\\n反将一军被一个内鬼击杀时,内鬼将失去职业,成为一个正常的冒名顶替者或变形者.",
   "Transmitter": "发送者",
   "TransmitterInfo": "完成一项任务可传送至最近的玩家",
   "TransmitterInfoLong": "(船员职业):\\n发送者完成一项任务时,你会被传送到最近的玩家.",
