--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -675,7 +675,7 @@
   "TwisterInfoLong": "(Impostors):\\nAs the Twister, you can use shapeshifting/petting to swap the position of all players randomly.\\n\\nThe Twister itself will not swap places with anyone, and players who are in vents cannot be teleported.",
   "LurkerInfoLong": "(Impostors):\\nAs the Lurker, you can jump into a vent to reduce your cooldown by a certain number of seconds. After you kill, your cooldown is reset to its original value.",
   "ConvictInfoLong": "(Madmates):\\nAs the Convict, you now work for the Impostors.",
-  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target; if you have at least one ability, use left. You gain one ability to use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color><#ffab1b>Neutral</color>).",
+  "VisionaryInfoLong": "(Impostors):\\nAs the Visionary, you see the teams of players you revealed. You can reveal a player's alignment by selecting them as your shapeshifting target; if you have at least one ability, use left. You gain one ability to use after each kill you make.\\nThe name color of a revealed player will indicate their team (<#8cffff>Crewmate</color>/<#ff1919>Impostor</color>/<#ffab1b>Neutral</color>).",
   "RefugeeInfoLong": "(Madmates):\\nAs the Renegade, you were an Amnesiac who remembered an Impostor role. Help the Impostors kill the crewmates.",
   "UnderdogInfoLong": "(Impostors):\\nAs the Underdog, your kill cooldown is longer until there's a certain amount of players alive. After that, your cooldown is shorter.",
   "EvilDivinerInfoLong": "(Impostors):\\nAs the Consigliere, you can reveal the roles of other players using your kill button.\\n\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
@@ -720,7 +720,7 @@
   "FarseerInfoLong": "(Crewmates):\\nAs an Investigator, use your kill button to reveal the role of a nearby player. A 「○」 will be displayed next to the reveal target. Stay near the target for a defined time to reveal their role.",
   "BloodhoundInfoLong": "(Crewmates):\\nAs a Coroner, you can't report corpses; instead, after trying to report the corpse, you will see an arrow leading you to the killer. If a meeting is called, the arrows disappear. Depending on the setting, the body you found cannot be reported.",
   "ScoutInfoLong": "(Crewmates):\\nAs a Scout, you can vote for a player in the meeting, which will mark their position for you in the game with arrows. In addition, at the beginning of a meeting, you will be shown in which room the player was last if the option is activated.",
-  "MerchantInfoLong": "(Crewmates):\\As a merchant, you sell a random add-on to a random player for each task you complete. Each add-on sold earns you money. If you have a certain amount of money, you can avert the next killing attempt against you by bribing the murderer. The bribed player won't be able to kill you, but you don't know who it is. The bribe money used is lost and is not available for additional bribes.",
+  "MerchantInfoLong": "(Crewmates):\\nAs the Merchant, you sell a random add-on to a random player for each task you complete. Each add-on sold earns you money. If you have a certain amount of money, you can avert the next killing attempt against you by bribing the murderer. The bribed player won't be able to kill you, but you don't know who it is. The bribe money used is lost and is not available for additional bribes.",
   "DeputyInfoLong": "(Crewmates):\\nAs the Deputy, use your kill button on a player to reset their kill cooldown.\\n\\nIf the target does not have a kill button, then the handcuff was a waste.",
   "GuardianInfoLong": "(Crewmates):\\nAs the Guardian, you become immortal on task completion. You can be guessed in meetings, though.",
   "AddictInfoLong": "(Crewmates):\\nThe Addict has a suicide timer indicated by the vent cooldown. If the timer expires, the Addict dies. After venting, the Addict is immortal for a certain time. The Addict is also frozen for a defined time after freezing and cannot report any bodies.",
@@ -1384,7 +1384,7 @@
   "LegacyLovers": "Legacy <color=#ff9ace>Lovers</color>",
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
   "LIRoleForOtherImps": "Other <#ff1919>Impostors</color> see <#ff9ace>Loving</color> <#ff1919>Impostor</color> as",
-  "PrivateChat": "Enable Private Chat for <color=#ff9ace>Lovers</color> <#ffff00>(VERY EXPERIMENTAL!!!!)</color>",
+  "PrivateChat": "Enable Private Chat for <color=#ff9ace>Lovers</color> <#ffff00>(VERY EXPERIMENTAL!!!!)</color> (REQUIRES DOUBLE EJECTION SCREEN)",
   "GuessAbility": "Guessers Can Guess <color=#ff9ace>Lovers</color>",
   "Untouched": "Untouched",
   "GuessLovers": "Sorry, host's settings do not allow to guess <color=#ff9ace>Lovers</color>.",
@@ -2178,7 +2178,6 @@
   "Message.YTPlanSelectFailed": "You cannot be assigned as <b>{0}</b>.\\nIt may be because you don't have this role enabled, or this role does not support being assigned.",
   "Message.YTPlanCanNotFindRoleThePlayerEnter": "Could not find the role you searching\\nUse command /r to show role list",
   "Message.YTPlanNotice": "Note: The [YouTuber Plan] is enabled in this lobby, which means the Host can specify their role in the next game to make it easier to get content. In case the Host abuses this feature, please exit the game or report it.\\nCurrent Creator Credentials:",
-  "Warning.OverrideExiledPlayer": "Warning: Since the number of Impostors is set to 1, in order to avoid black screen, the voting screen will always show as a tied vote or a skip vote (only affects the visual, not the voting results). Please set more number of Impostors to avoid this problem.",
   "Warning.InvalidRpc": "Kicked <b>{0}</b> because an invalid RPC was received.\\nPlease check that no mods other than EHR are installed.",
   "Warning.ReportDeadBodyHack": "Banned hacker <b>{0}</b> for sending too many ReportDeadBody RPCs.\\nUse SHIFT + L + ENTER to end the game or SHIFT + M + ENTER to end the meeting.\\nSorry for the inconvenience.",
   "Warning.NoModHost": "EHR is not installed on the host",
@@ -2353,8 +2352,8 @@
   "LoadingHint.13": "Role text covering up names in meetings?\nUse /xf!",
   "LoadingHint.14": "Bored of waiting in lobby or after dying early?\nUse /gno to play a simple Guess The Number minigame to speed up time!",
   "LoadingHint.15": "Black screened after a meeting?\nTry pressing CTRL + SHIFT + X to fix it!",
-  "LoadingHint.16": "Don't know what your role does?\nPress F1 instead of typing commands!",
-  "LoadingHint.17": "Unsure about your add-ons?\nPress F2 instead of using commands!",
+  "LoadingHint.16": "Don't know what your role or add-on does?\nPress F1 instead of typing commands!",
+  "LoadingHint.17": "Did you know?\nYou can quickly enable/disable roles by typing /os {percentage} {role}!\n(This will set the spawn chance of the role to the specified percentage)",
   "LoadingHint.18": "Edited the translation file but don't want to restart the game just to apply the changes?\nPress F5 + T!",
   "LoadingHint.19": "Chat icon not appearing?\nPress SHIFT + C + ENTER to fix it!",
   "LoadingHint.20": "Did you know?\nYou can instantly start the game without waiting for the 5 seconds countdown by pressing SHIFT!",
@@ -2714,7 +2713,6 @@
   "AntiBlackOutLoggerSendInGame": "Because of an unknown error, the game will end to prevent black screen.",
   "AntiBlackOutRequestHostToForceEnd": "You were the reason of the black screen, you are asking the host to stop the game...",
   "AntiBlackOutHostRejectForceEnd": "You were the reason of the black screen, and the host is not going to end the game, we will disconnect you soon.",
-  "AntiBlackout.OverrideExiledPlayer": "To prevent black screens, the ejection screen shows a tied vote. (Players still get ejected, this is just visual.)",
   "GitHub": "GitHub",
   "Discord": "Discord",
   "Website": "Website",
@@ -2949,7 +2947,7 @@
   "YinYangModeNormal": "Kill",
   "Duellist": "Duellist",
   "DuellistInfo": "Duel with Players",
-  "DuellistInfoLong": "(Impostors):\\As the Duellist, you can shapeshift into someone to teleport them and you next to each other outside the map. You will both be there until one of you die.",
+  "DuellistInfoLong": "(Impostors):\\nAs the Duellist, you can shapeshift into someone to teleport them and you next to each other outside the map. You will both be there until one of you die.",
   "TargetCannotBeTeleported": "Target cannot be teleported",
   "Swiftclaw": "Swiftclaw",
   "SwiftclawInfo": "Dash to Go Faster",
@@ -3006,9 +3004,9 @@
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
   "Hypnotist.DoReportAfterHypnosisEnds": "Process reports that were blocked during hypnosis after the hypnosis expires",
-  "Altruist": "Altruist",
-  "AltruistInfo": "Erase your killer's role",
-  "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, if an impostor kills you, they will lose their abilities and become a regular impostor or shapeshifter.",
+  "Bane": "Bane",
+  "BaneInfo": "Erase your killer's role",
+  "BaneInfoLong": "(Crewmates):\\nAs the Bane, if an impostor kills you, they will lose their abilities and become a regular impostor or shapeshifter.",
   "Transmitter": "Transmitter",
   "TransmitterInfo": "TP to nearest player by doing a task",
   "TransmitterInfoLong": "(Crewmates):\\nAs the Transmitter, when you complete a task, you teleport to the nearest player.",
@@ -3395,7 +3393,7 @@
   "TornadoRange": "Tornado Range",
   "TeleportedByTornado": "\\nOh no! You just got caught up in a tornado,\\nand you flew to over here!",
   "Deadlined": "Deadlined",
-  "DeadlinedInfo": "Must do a task or kill each round",
+  "DeadlinedInfo": "Must do a task or use kill button each round",
   "DeadlinedInfoLong": "(Add-ons):\\nAs the Deadlined, you must complete a task or kill someone each round. If you fail to do so, you will die. If a meeting gets called too soon after the previous one ends (time set by the host), you won't die. This doesn't apply on the first round.",
   "Prefix.Deadlined": "Deadlined",
   "Deadlined.InactiveTime": "Safe Time After Meetings",
@@ -3743,6 +3741,15 @@
   "CandleLighterTasksFinishedVision": "Vision after completing all tasks",
   "AprilFoolsMode": "April Fools Mode",
   "SilenceMode": "Silencing Method",
+  "Altruist": "Altruist",
+  "AltruistInfo": "Revive Dead Players",
+  "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, you can revive a dead player by reporting their body. The revived player will be able to continue playing as if they were never dead. If you revive a player, you will die.\\nYou can switch between reviving and reporting modes by entering a vent/petting your pet.",
+  "AltruistSuffixRevive": "<#00ffa5>Target is revived in </color>{0}s",
+  "AltruistSuffix": "<#00ffa5>Mode:</color> <b>{0}</b>",
+  "AltruistReviveMode": "Revive",
+  "AltruistReportMode": "Report",
+  "RevivedByAltruist": "<#ffff00><size=150%>You've been revived by the <color=#300000>Altruist</color>!</size></color>",
+  "Altruist.ReviveTime": "Revive Time",
   "Adventurer": "Adventurer",
   "AdventurerInfo": "Collect Resources to Perform Actions",
   "AdventurerInfoLong": "(Crewmates):\\nAs the Adventurer, you can collect resources listed below and craft them into weapons if you have the required amount of materials for it.<size=70%>\\n\\n<u><b>Resources (and how to obtain them):</b></u>\\n- ❖ (Complete a Task)\\n- Θ (Players Leave This Behind<sup>*</sup>)\\n- ♳ (Dead Bodies<sup>*</sup>)\\n- ⁂ (Shapeshift Skins<sup>*</sup>)\\n- \u2600 (Fix Lights)\\n- ○ (Found in Groups<sup>*</sup>)\\n<size=50%><sup>*</sup> When this resource is available somewhere, you get an arrow pointing towards that location. (Except dead bodies.) Go there to collect it.</size>\\n\\n<u><b>Weapons (and their ingredients):</b></u>\\n- Gun (1 ♳ + 1 ❖) (Kill nearest player)\\n- Shield (3 ❖) (Gives nearest player a 1-time shield)\\n- Lantern (1 \u2600 + 1 ❖) (Increases crewmates' vision for some time)\\n- Portal (2 Θ) (Swaps you with a random player)\\n- Wrench (1 \u2600 + 2 ❖) (Clears the current sabotage)\\n- Proxy (2 ○ + 1 ❖) (Gives you +1 vote in the next meeting)\\n- Prediction (1 ♳ + 2 ⁂ + 1 ❖) (Reveals the nearest player's role)\\n- RNG (2 Θ + 2 ❖) (Makes a random weapon)</size>\\n\\nTo use your weapons, pet your pet.",
