--- a/Resources/Lang/ko_KR.json
+++ b/Resources/Lang/ko_KR.json
@@ -3006,9 +3006,9 @@
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
   "Hypnotist.DoReportAfterHypnosisEnds": "Process reports that were blocked during hypnosis after the hypnosis expires",
-  "Altruist": "Altruist",
-  "AltruistInfo": "Erase your killer's role",
-  "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, if an impostor kills you, they will lose their abilities and become a regular impostor or shapeshifter.",
+  "Bane": "Bane",
+  "BaneInfo": "Erase your killer's role",
+  "BaneInfoLong": "(Crewmates):\\nAs the Bane, if an impostor kills you, they will lose their abilities and become a regular impostor or shapeshifter.",
   "Transmitter": "Transmitter",
   "TransmitterInfo": "TP to nearest player by doing a task",
   "TransmitterInfoLong": "(Crewmates):\\nAs the Transmitter, when you complete a task, you teleport to the nearest player.",
