--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1766,7 +1766,7 @@
   "DeathReason.AFK": "AFK",
   "DeathReason.Revenge": "Revenge",
   "DeathReason.Eaten": "Eaten",
-  "DeathReason.Sacrifice": "Victim",
+  "DeathReason.Sacrifice": "Sacrifice",
   "DeathReason.Quantization": "Quantization",
   "DeathReason.Overtired": "Overtired",
   "DeathReason.Ashamed": "Ashamed",
