New role: Wizard & Make some roles non-unique

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3751,6 +3751,9 @@
   "RevivedByAltruist": "<#ffff00><size=150%>You've been revived by the <color=#300000>Altruist</color>!</size></color>",
   "AltruistKillerAlert": "<#ffff00><size=150%>A player you killed was revived by the <color=#300000>Altruist</color>!</size></color>",
   "Altruist.ReviveTime": "Revive Time",
+  "Altruist.ReviveTargetCanReportTheirOwnBody": "Revived players can report their own dead body",
+  "Altruist.ReviveTargetsKillerGetsAlert": "The killer of the revived player gets an alert about the revival",
+  "Altruist.ReviveTargetsKillerGetsArrow": "The killer also gets an arrow towards the revived player",
   "Adventurer": "Adventurer",
   "AdventurerInfo": "Collect Resources to Perform Actions",
   "AdventurerInfoLong": "(Crewmates):\\nAs the Adventurer, you can collect resources listed below and craft them into weapons if you have the required amount of materials for it.<size=70%>\\n\\n<u><b>Resources (and how to obtain them):</b></u>\\n- ❖ (Complete a Task)\\n- Θ (Players Leave This Behind<sup>*</sup>)\\n- ♳ (Dead Bodies<sup>*</sup>)\\n- ⁂ (Shapeshift Skins<sup>*</sup>)\\n- \u2600 (Fix Lights)\\n- ○ (Found in Groups<sup>*</sup>)\\n<size=50%><sup>*</sup> When this resource is available somewhere, you get an arrow pointing towards that location. (Except dead bodies.) Go there to collect it.</size>\\n\\n<u><b>Weapons (and their ingredients):</b></u>\\n- Gun (1 ♳ + 1 ❖) (Kill nearest player)\\n- Shield (3 ❖) (Gives nearest player a 1-time shield)\\n- Lantern (1 \u2600 + 1 ❖) (Increases crewmates' vision for some time)\\n- Portal (2 Θ) (Swaps you with a random player)\\n- Wrench (1 \u2600 + 2 ❖) (Clears the current sabotage)\\n- Proxy (2 ○ + 1 ❖) (Gives you +1 vote in the next meeting)\\n- Prediction (1 ♳ + 2 ⁂ + 1 ❖) (Reveals the nearest player's role)\\n- RNG (2 Θ + 2 ❖) (Makes a random weapon)</size>\\n\\nTo use your weapons, pet your pet.",
@@ -4304,6 +4307,15 @@
   "AADelay": "Time to Leave Device",
   "AAWarning": "<#ffff00>You must move away from this device or you die!</color>",
   "AADone": "The process has finished",
+  "Wizard": "Wizard",
+  "WizardInfo": "Change Players' Stats",
+  "WizardInfoLong": "(Crewmates):\\nAs the Wizard, you have 4 stats you can change for each player: Speed, Vision, and Kill Cooldown. Pet to cycle between these stats. Press Unshift to increase the value of the stat. To give the selected stat with its value to a player, use your kill button on them.",
+  "Wizard.Vision": "Vision",
+  "Wizard.BuffGivenNotify": "<#00ffa5>{0}'s <#ffffff>{1}</color> was set to <#ffffff>{2}</color></color>",
+  "Wizard.Buff.Speed": "Speed",
+  "Wizard.Buff.Vision": "Vision",
+  "Wizard.Buff.KCD": "Kill Cooldown",
+  "Wizard.SelectedBuff": "<#00ffa5>Selected Buff:</color> <b>{0}</b> {1}",
   "Oxyman": "Oxyman",
   "OxymanInfo": "Your Oxygen Level Affects Everything",
   "OxymanInfoLong": "(Crewmates):\\nAs the Oxyman, you have an Oxygen level below your name. The Oxygen level decreases overtime. You have to vent to increase your Oxygen. If the Oxygen level reaches 0%, you die. If it's very low, you're blind. If it's low, you're slower. If it's high, you're faster. If it's very high, you're invulnerable.",
