Port vent interaction blocking from More Gamemodes, Add strings for Spotter

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3490,6 +3490,10 @@
   "Axe": "Axe",
   "Lance": "Lance",
   "Shield": "Shield",
+  "Spotter": "Spotter",
+  "SpotterInfo": "You see Visual Tasks",
+  "SpotterInfoLong": "(Add-ons):\\nYou see players complete visual tasks as if the setting was enabled.",
+  "Prefix.Spotter": "Spotter",
   "EveryoneCanVent": "Everyone Can Vent",
   "OverrideScientistBasedRoles": "Also Override Scientist Based Roles to Engineer",
   "WhackAMole": "Whack-A-Mole",
