Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3490,6 +3490,10 @@
   "Axe": "Axe",
   "Lance": "Lance",
   "Shield": "Shield",
+  "Spotter": "Spotter",
+  "SpotterInfo": "You see Visual Tasks",
+  "SpotterInfoLong": "(Add-ons):\\nYou see players complete visual tasks as if the setting was enabled.",
+  "Prefix.Spotter": "Spotter",
   "EveryoneCanVent": "Everyone Can Vent",
   "OverrideScientistBasedRoles": "Also Override Scientist Based Roles to Engineer",
   "WhackAMole": "Whack-A-Mole",
@@ -4310,7 +4314,7 @@
   "AADone": "The process has finished",
   "Wizard": "Wizard",
   "WizardInfo": "Change Players' Stats",
-  "WizardInfoLong": "(Crewmates):\\nAs the Wizard, you have 4 stats you can change for each player: Speed, Vision, and Kill Cooldown. Pet to cycle between these stats. Press Unshift to increase the value of the stat. To give the selected stat with its value to a player, use your kill button on them.",
+  "WizardInfoLong": "(Crewmates):\\nAs the Wizard, you have 3 stats you can change for each player: Speed, Vision, and Kill Cooldown. Pet to cycle between these stats. Press Unshift to increase the value of the stat. To give the selected stat with its value to a player, use your kill button on them.",
   "Wizard.Vision": "Vision",
   "Wizard.BuffGivenNotify": "<#00ffa5>{0}'s <#ffffff>{1}</color> was set to <#ffffff>{2}</color></color>",
   "Wizard.Buff.Speed": "Speed",
