--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -621,7 +621,7 @@
   "TrackerEHRInfoLong": "(Crewmates):\\nAs the Tracker, you can track players by placing a tracker on them using your track button.",
   "PhantomEHRInfoLong": "(Impostors):\\nAs the Phantom, you can go invisible for a short period. During this time, you can't be seen by Crewmates.",
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will decrease, but if you eliminate anyone else, your next kill cooldown will increase; the target will switch after a predetermined time.",
-  "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting your pet. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
+  "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
   "ShapeMasterInfoLong": "(Impostors):\\nThe Shapemaster has no Shapeshift cooldown, but their default Shapeshift duration is shorter.",
   "MareInfoLong": "(Add-ons):\\nAs the Mare, you have a low kill cooldown but can only kill during lights. Additionally, your name will appear in red during lights. Only assigned to Impostors and cannot be guessed.",
@@ -2921,7 +2921,7 @@
   "InsightNotify": "<color=#ffffff>Someone in the game is</color> {0}",
   "Tunneler": "Tunneler",
   "TunnelerInfo": "Mark a position and TP back there",
-  "TunnelerInfoLong": "(Crewmates):\\nAs the Tunneler, you may mark a position by petting your pet, and then you can teleport back to the marked position by petting your pet again.",
+  "TunnelerInfoLong": "(Crewmates):\\nAs the Tunneler, you may mark a position by petting, and then you can teleport back to the marked position by petting again.",
   "Detour": "Detour",
   "DetourInfo": "Pass Kills Onto Nearest Player",
   "DetourInfoLong": "(Crewmate):\\nAs the Detour, all kill button related actions on you will be blocked and instead happen on the closest player to you.",
@@ -2963,7 +2963,7 @@
   "CantankerousStartingPoints": "Starting Points",
   "Druid": "Druid",
   "DruidInfo": "Place Triggers to Know Where Everyone Is",
-  "DruidInfoLong": "(Crewmates):\\nAs the Druid, you may vent, and after a delay, place a trigger where you stand. If any player walks closely by your trigger, you will be notified.\\nPlace your triggers where only impostors go, and catch them!\\n\\nNote: If the setting to use pets is on, you can place triggers immediately by petting your pet.",
+  "DruidInfoLong": "(Crewmates):\\nAs the Druid, you may vent, and after a delay, place a trigger where you stand. If any player walks closely by your trigger, you will be notified.\\nPlace your triggers where only impostors go, and catch them!\\n\\nNote: If the setting to use pets is on, you can place triggers immediately by petting.",
   "DruidTriggerPlaceDelayOpt": "Trigger Place Delay (when not using pets)",
   "DruidTimeLeft": "Placing trigger in {0}s",
   "DruidTriggerTriggered": "Trigger {0} was triggered by someone! {1}",
@@ -2990,7 +2990,7 @@
   "MafiosoHUDTextWithDualPistols": "<color=#00ffa5>Tier:</color> {0}, <color=#00ffa5>XP:</color> {1}\\n",
   "Whisperer": "Whisperer",
   "WhispererInfo": "Question Souls to Get Info",
-  "WhispererInfoLong": "(Crewmates):\\nAs the Whisperer, you can ask the souls of dead players for information. You'll see the souls of the players who have died (after the next meeting) and can question them by petting your pet on them. You have to stay near the soul for a few seconds. You then get random details on the soul or the killer shown below your name.",
+  "WhispererInfoLong": "(Crewmates):\\nAs the Whisperer, you can ask the souls of dead players for information. You'll see the souls of the players who have died (after the next meeting) and can question them by petting on them. You have to stay near the soul for a few seconds. You then get random details on the soul or the killer shown below your name.",
   "WhispererCooldown": "Questioning Cooldown",
   "WhispererDuration": "Questioning Duration",
   "WhispererInfo.Color": "A {0} color killed me (<size=50%>{1}</color>)",
@@ -3021,7 +3021,7 @@
   "Adrenaline.Suffix": "<size=80%><#ffff00>You were attacked!\\nIf a meeting doesn't start before <#ffffff>{0}s</color>, you die!</color></size>",
   "Sentry": "Sentry",
   "SentryInfo": "Monitor a Room",
-  "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)</size>\\nYou also get a notification when someone uses a vent or shapeshifts in that room.\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
+  "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting. When you pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)</size>\\nYou also get a notification when someone uses a vent or shapeshifts in that room.\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
   "Sentry.ShowInfoDuration": "Info is Visible for",
   "Sentry.PlayersKnowAboutCamera": "Players Know if the Room is Monitored",
   "Sentry.CannotSeeInfoDuringComms": "Cannot See Info During Comms Sabotages",
@@ -3178,7 +3178,7 @@
   "Socialite.Suffix": "<size=80%>Your target is {0}</size>",
   "Cherokious": "Cherokious",
   "CherokiousInfo": "Do tasks to get Bullets to Kill",
-  "CherokiousInfoLong": "(Neutrals):\\nAs the Cherokious, you can get bullets by completing tasks. You can kill by petting your pet near someone. You can only kill if you have bullets.",
+  "CherokiousInfoLong": "(Neutrals):\\nAs the Cherokious, you can get bullets by completing tasks. You can kill by petting near someone. You can only kill if you have bullets.",
   "Autocrat": "Autocrat",
   "AutocratInfo": "TP nearest player to you by doing a task",
   "AutocratInfoLong": "(Crewmates):\\nAs the Autocrat, when you complete a task, you teleport the nearest player to you.",
@@ -3355,7 +3355,7 @@
   "EndermanSecondsBeforeTP": "Seconds Before Teleporting",
   "Mycologist": "Mycologist",
   "MycologistInfo": "Spread Spores and Kill Infected Players",
-  "MycologistInfoLong": "(Neutral):\\nAs the Mycologist, you can infect players around you by entering a vent/sabotaging/petting your pet. You can only kill the ones you've infected.",
+  "MycologistInfoLong": "(Neutral):\\nAs the Mycologist, you can infect players around you by entering a vent/sabotaging/petting. You can only kill the ones you've infected.",
   "MycologistAction": "Action To Infect",
   "InfectRadius": "Infect Radius",
   "InfectDelay": "Infect Delay",
@@ -3375,7 +3375,7 @@
   "HookshotPullTarget": "Pull Target",
   "Sprayer": "Sprayer",
   "SprayerInfo": "Place Traps",
-  "SprayerInfoLong": "(Neutral):\\nAs the Sprayer, you can place traps by sabotaging/petting your pet. If someone walks into a trap, they'll have lower speed and vision for some time. If a player walks into a trap a specified amount of times, they suicide.",
+  "SprayerInfoLong": "(Neutral):\\nAs the Sprayer, you can place traps by sabotaging/petting. If someone walks into a trap, they'll have lower speed and vision for some time. If a player walks into a trap a specified amount of times, they suicide.",
   "NegativeEffectDuration": "Lower Vision/Speed Duration",
   "SprayerMaxTrappedTimes": "Times a Player Has to Walk Into a Trap to Die",
   "SprayerNotify": "Trap placed",
@@ -3387,7 +3387,7 @@
   "MoleInfoLong": "(Crewmates):\\nAs the Mole, when you vent, you get kicked out and teleport to a random vent on the map. / Pet to teleport to a random vent.",
   "Tornado": "Tornado",
   "TornadoInfo": "Spawn Tornados",
-  "TornadoInfoLong": "(Crewmates):\\nAs the Tornado, you can spawn tornados by petting your pet. When someone walks close to a tornado, they fly (teleport) to a random place on the ship.",
+  "TornadoInfoLong": "(Crewmates):\\nAs the Tornado, you can spawn tornados by petting. When someone walks close to a tornado, they fly (teleport) to a random place on the ship.",
   "TornadoCooldown": "Tornado Spawn Cooldown",
   "TornadoDuration": "Tornado Duration",
   "TornadoRange": "Tornado Range",
@@ -3483,7 +3483,7 @@
   "PyroBurnCooldown": "Kill Cooldown after killing a Doused Player",
   "WeaponMaster": "Weapon Master",
   "WeaponMasterInfo": "Use your weapons to kill everyone",
-  "WeaponMasterInfoLong": "(Neutral):\\nAs the Weapon Master, you can cycle between your weapons by petting your pet/calling a sabotage.\\n\\nThe Sword weapon is a normal kill method.\\n\\nThe Axe weapon kills everyone in a certain radius when you make a kill. You have a higher kill cooldown while using this weapon.\\n\\nThe Lance weapon sets your kill range to the maximum, and you don't lunge toward your kills. You can't vent while using this weapon.\\n\\nWhile using your Shield, you can survive an attack once. You can't kill while using your shield.",
+  "WeaponMasterInfoLong": "(Neutral):\\nAs the Weapon Master, you can cycle between your weapons by petting/calling a sabotage.\\n\\nThe Sword weapon is a normal kill method.\\n\\nThe Axe weapon kills everyone in a certain radius when you make a kill. You have a higher kill cooldown while using this weapon.\\n\\nThe Lance weapon sets your kill range to the maximum, and you don't lunge toward your kills. You can't vent while using this weapon.\\n\\nWhile using your Shield, you can survive an attack once. You can't kill while using your shield.",
   "WMRadius": "Axe Mode Death Radius",
   "WMShieldAlreadyUsed": "Your shield was already used",
   "Sword": "Sword",
@@ -3576,7 +3576,7 @@
   "GamblerGet.HighKCD": "<color=#ffffff><color=#ffa500>Effect:</color> Higher Kill Cooldown (<color=#ffa500>{0}s</color>)</color>",
   "Patroller": "Patroller",
   "PatrollerInfo": "Have Different Boosts in Each Room",
-  "PatrollerInfoLong": "(Neutrals):\\nAs the Patroller, you have different boosts in each room. At the start of the game, it gets randomly rolled which boosts you get in which room. Additionally, you can vent freely from any room once per round.\\n\\nKill everyone to win!\\nYou can see your boosts by petting your pet if the setting to use them is on.",
+  "PatrollerInfoLong": "(Neutrals):\\nAs the Patroller, you have different boosts in each room. At the start of the game, it gets randomly rolled which boosts you get in which room. Additionally, you can vent freely from any room once per round.\\n\\nKill everyone to win!\\nYou can see your boosts by petting if the setting to use them is on.",
   "PatrollerNotifyNoBoost": "You are now in <color=#00ffa5>{0}</color>\\nIn this room, you have <#ff0000>no boosts</color>",
   "PatrollerNotify": "You are now in <color=#00ffa5>{0}</color>\\nIn this room, {1}",
   "PatrollerBoost.Speed": "you have <color=#00ffa5>higher speed</color>",
@@ -3743,7 +3743,7 @@
   "SilenceMode": "Silencing Method",
   "Altruist": "Altruist",
   "AltruistInfo": "Revive Dead Players",
-  "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, you can revive a dead player by reporting their body. The revived player will be able to continue playing as if they were never dead. If you revive a player, you will die.\\nYou can switch between reviving and reporting modes by entering a vent/petting your pet.",
+  "AltruistInfoLong": "(Crewmates):\\nAs the Altruist, you can revive a dead player by reporting their body. The revived player will be able to continue playing as if they were never dead. If you revive a player, you will die.\\nYou can switch between reviving and reporting modes by entering a vent/petting.",
   "AltruistSuffixRevive": "<#00ffa5>Target is revived in </color>{0}s",
   "AltruistSuffix": "<#00ffa5>Mode:</color> <b>{0}</b>",
   "AltruistReviveMode": "Revive",
@@ -4061,7 +4061,7 @@
   "RunnerInfoLong": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
   "CaptureTheFlag": "CAPTURE THE FLAG",
   "ModeCaptureTheFlag": "Gamemode: Capture The Flag",
-  "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by petting your pet near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
+  "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by petting near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
   "CTF_AlertTeamMembersOfFlagTaken": "Alert Team Members When their Flag is Taken",
   "CTF_ArrowToEnemyFlagCarrier": "Arrow to Enemy Flag Carrier",
   "CTF_AlertTeamMembersOfEnemyFlagTaken": "Alert Team Members When the Enemy's Flag is Taken",
@@ -4287,7 +4287,7 @@
   "Negotiator.TargetPickSuccess": "You've chosen to <b>{0}</b>",
   "Commander": "Commander",
   "CommanderInfo": "Command your team",
-  "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 6 modes by venting/petting your pet. You can execute the selected action by shapeshifting.<size=70%>\\n\\n<b><u>Mark:</u></b> Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\n<b><u>Whistle:</u></b> This tells all or 1 specific<sup>*</sup> impostor(s) to come to you and gives them (each) an arrow pointing towards you.\\n\\n<b><u>Kill Anyone:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to kill anyone.\\n\\n<b><u>Leave Player Alive:</u></b> Shapeshifting into a crewmate marks that player with a unique color and text telling other impostors to not kill that player. Shapeshifting into an impostor tells that impostor to not kill anyone.\\n\\n<b><u>Don't Sabotage:</u></b> Notifies all impostors to not call any sabotage.\\n\\n<b><u>Use Ability:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to use their ability.\\n\\n<size=60%><sup>*</sup> If you shapeshift into an impostor, the action executes specifically and only on them.</size></size>",
+  "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 6 modes by venting/petting. You can execute the selected action by shapeshifting.<size=70%>\\n\\n<b><u>Mark:</u></b> Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\n<b><u>Whistle:</u></b> This tells all or 1 specific<sup>*</sup> impostor(s) to come to you and gives them (each) an arrow pointing towards you.\\n\\n<b><u>Kill Anyone:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to kill anyone.\\n\\n<b><u>Leave Player Alive:</u></b> Shapeshifting into a crewmate marks that player with a unique color and text telling other impostors to not kill that player. Shapeshifting into an impostor tells that impostor to not kill anyone.\\n\\n<b><u>Don't Sabotage:</u></b> Notifies all impostors to not call any sabotage.\\n\\n<b><u>Use Ability:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to use their ability.\\n\\n<size=60%><sup>*</sup> If you shapeshift into an impostor, the action executes specifically and only on them.</size></size>",
   "CommanderNotify": "The Commander wants you to meet with them",
   "CommanderTarget": "<size=1.7>Commander's target</size>",
   "CommanderDontKill": "<size=1.7>Don't kill this player</size>",
@@ -4362,7 +4362,7 @@
   "Prefix.Noisy": "Noisy",
   "Clairvoyant": "Clairvoyant",
   "ClairvoyantInfo": "Know Remaining Killer Counts",
-  "ClairvoyantInfoLong": "(Crewmates):\\nAs the Clairvoyant, you can see the remaining impostor and neutral killer counts by entering a vent or petting your pet.",
+  "ClairvoyantInfoLong": "(Crewmates):\\nAs the Clairvoyant, you can see the remaining impostor and neutral killer counts by entering a vent or petting.",
   "Safeguard": "Safeguard",
   "SafeguardInfo": "You Get a Temporary Shield by Completing Tasks",
   "SafeguardInfoLong": "(Crewmates):\\nAs the Safeguard, you get a temporary shield with each task you complete.",
@@ -4385,7 +4385,7 @@
   "Telekinetic.Mode.Doors": "Doors",
   "Nonplus": "Nonplus",
   "NonplusInfo": "Blind Others",
-  "NonplusInfoLong": "(Neutrals):\\nAs the Nonplus, you can blind others by venting or petting your pet. Blinded players can't see anything for a set amount of time.\\nKill everyone to win.",
+  "NonplusInfoLong": "(Neutrals):\\nAs the Nonplus, you can blind others by venting or petting. Blinded players can't see anything for a set amount of time.\\nKill everyone to win.",
   "Nonplus.BlindDuration": "Blind Duration",
   "Nonplus.BlindCooldown": "Blind Cooldown",
   "Rookie": "Rookie",
