ND fixes + Bloodlust add-on shows with role name + Shifter/Mastermind changes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3541,8 +3541,6 @@
   "MastermindTimeLimit": "Time Limit to Kill Someone / Complete a Task",
   "MastermindDelay": "Manipulation Notify Delay",
   "ManipulateNotify": "\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must kill someone within <color=#ffa500>{0}s</color> or you die!</color>",
-  "ManipulateTaskNotify": "\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must complete a task within <color=#ffa500>{0}s</color> or you die!</color>",
-  "ManipulatePetNotify": "\\n\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must kill someone within <color=#ffa500>{0}s</color> or you die!</color>\n<color=#ffffff>Use your pet button near someone to kill them.</color>",
   "ManipulatedKilled": "The player you manipulated has killed / completed a task",
   "MastermindTargetSurvived": "<color=#00ff00>You survive</color>",
   "Gambler": "Gambler",
@@ -3935,7 +3933,7 @@
   "TaskMarkPerRound": "Maximum Number of Tasks Marked Each Round",
   "Shifter": "Shifter",
   "ShifterInfo": "Steal Someone's Role",
-  "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your pet button near them. Depending on the settings, you may also steal their progress in their role and ability uses, and their add-ons.\\nIf you have this role when the game ends, you lose!",
+  "ShifterInfoLong": "(Neutrals):\\nAs the Shifter, you must steal someone's role by using your kill button near them. Depending on the settings, you may also steal their progress in their role and ability uses.\\nIf you have this role when the game ends, you lose!",
   "TryChangeBasis": "Try Changing Role Basis <#ffff00>(EXPERIMENTAL)</color>",
   "ShifterKillButtonText": "Shift Role",
   "Tremor": "Tremor",
