Finish this that I left incomplete when falling asleep in front of my laptop

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2410,6 +2410,9 @@
   "ERR-000-804-1": "EHR does not support the Vanilla HnS, so unloaded.",
   "ERR-001-000-3": "Main dictionary has duplicated keys.",
   "ERR-002-000-1": "Your Among Us version is outdated.",
+  "DraftStart": "Drafting has started! You now have a change to pick a role from the list below if you'd like to get one of them for the next game. The roles you get to choose from, with their indexes, are:\\n{0}\\n\\nTo pick one of these, simply type <b>/draft {index}</b> in the chat, replacing {index} with the number of the role you want to pick.\\nIf you don't pick a role, you get a random one like you normally would.",
+  "DraftTitle": "<#00a5ff>➡</color> <#00ffa5>Drafting</color> <#00a5ff>⬅</color>",
+  "DraftChosen": "You have chosen the <b>{0}</b> role for the next game.\\n<size=70%>You can still change your choice by typing /draft {index} again.</size>",
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
   "DeathCommandFail": "<#ff0000>The game could not determine your real killer.</color>",
   "DefaultSystemMessageTitle": "➡ SYSTEM MESSAGE ⬅",
