/readycheck & bug fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1153,6 +1153,10 @@
   "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
   "MenuTitle.CTA": "★ Custom Team Assignment ★",
   "MenuTitle.AFKDetection": "★ AFK Detection ★",
+  "ReadyCheckMessage": "The host is checking how many players are ready to start the game.\\nPlease type <b>/ready</b> to let the host know you're not AFK.",
+  "ReadyCheckTitle": "<#ffff00>★ Ready Check ★</color>",
+  "EveryoneReadyTitle": "<#00ff00>Everyone is ready!</color>",
+  "PlayersNotReadyTitle": "<#ffff00><#ffab1b>{0}</color> players are not ready!</color> They are:",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
   "SidekickKnowOtherSidekickRole": "<color=#00b4eb>Sidekicks</color> know the roles of other <color=#00b4eb>Sidekicks</color>",
@@ -1701,7 +1705,6 @@
   "RefugeeKillImpostor": "Renegades cannot kill Impostors",
   "GAGuarded": "This player is shielded by the Guardian Angel",
   "TraitorKillImpostor": "As the Traitor, you cannot kill Impostors",
-  "KnightedKillMonarch": "As the Knighted player, you cannot kill the Monarch",
   "RookieKillRoundOne": "As a Rookie, you cannot kill in the first round",
   "SocialiteTarget": "The target of the Socialite cannot be killed\\nYou were added to their Guest List",
   "BodyguardProtected": "The Bodyguard protected your target and died for them",
@@ -2256,6 +2259,8 @@
   "CommandDescription.Unmute": "Unmute someone.",
   "CommandDescription.DraftStart": "Start drafting, where players may choose their roles for the next game",
   "CommandDescription.Draft": "Choose a role in the draft",
+  "CommandDescription.ReadyCheck": "Start a ready check (check who is AFK) (results displayed after 30s)",
+  "CommandDescription.Ready": "Mark yourself as ready",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
