--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2347,10 +2347,10 @@
   "MuteMessage": "<#ff0000>You're muted and cannot send messages. The mute will expire in <#ffff00>{0}</color> seconds.</color>",
   "ThankYouForUsingEHR": "Thank you for using EHR!",
   "GMRoles": "<color=#ff5b70>【 ★ Roles ★ 】</color>",
-  "IMPoles": "【 ★ Impostor Roles ★ 】",
-  "CREWRoles": "【 ★ Crewmate Roles ★ 】",
-  "NEUTRRoles": "<color=#ffab1b>【 ★ Neutral Roles ★ 】</color>",
-  "ADDRoles": "<color=#ff9ace>【 ★ Add-ons ★ 】</color>",
+  "ImpostorRoles": "【 ★ Impostor Roles ★ 】",
+  "CrewmateRoles": "【 ★ Crewmate Roles ★ 】",
+  "NeutralRoles": "<color=#ffab1b>【 ★ Neutral Roles ★ 】</color>",
+  "AddonRoles": "<color=#ff9ace>【 ★ Add-ons ★ 】</color>",
   "LoadingHint.0": "Did you know?\nYou can put roles of your choice into custom teams!\nView instructions on our website (link on main menu)!",
   "LoadingHint.1": "Did you know?\nYou can force or ban certain role and add-on combos using /combo in lobby!\nGive it a try after this game!",
   "LoadingHint.2": "Did you know?\nYou can change roles', add-ons', settings', etc. names using custom translation files!",
